Fix for http://jira.icefaces.org/browse/ICE-1762 (ice:panelCollapsible has event ordering issue between image indicator and collapsing of the panel)
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces/trunk@14206 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/icefaces/samples/component-showcase/web/css/showcase_style.css
+++ b/icefaces/samples/component-showcase/web/css/showcase_style.css
@@ -1078,19 +1078,19 @@ em {
     color: #004080;
     text-decoration: underline;
 }
-.icePnlClpsblHdr span, .icePnlClpsblHdr-dis span,
-    .icePnlClpsblColpsdHdr span, .icePnlClpsblColpsdHdr-dis span{
+.pnlClpsblDemoHdr span, .pnlClpsblDemoHdr-dis span,
+    .pnlClpsblDemoColpsdHdr span, .pnlClpsblDemoColpsdHdr-dis span{
     padding-left: 18px;   
 }
-.icePnlClpsblHdr div, .icePnlClpsblHdr-dis div,
-    .icePnlClpsblColpsdHdr div, .icePnlClpsblColpsdHdr-dis div{
+.pnlClpsblDemoHdr div, .pnlClpsblDemoHdr-dis div,
+    .pnlClpsblDemoColpsdHdr div, .pnlClpsblDemoColpsdHdr-dis div{
     background-repeat: no-repeat;
     background-position: left top;
 }
-.icePnlClpsblHdr div, .icePnlClpsblHdr-dis div{
+.pnlClpsblDemoHdr div, .pnlClpsblDemoHdr-dis div{
     background-image: url( "../images/panelCollapsible/arrowDown.gif" );
 }
-.icePnlClpsblColpsdHdr div, .icePnlClpsblColpsdHdr-dis div{
+.pnlClpsblDemoColpsdHdr div, .pnlClpsblDemoColpsdHdr-dis div{
     background-image: url( "../images/panelCollapsible/arrowUp.gif" );
 }
 
